# rocket-rs-boilerplate

./: .env  .gitignore  Cargo.toml  development.db  docker-compose.yml  openapi.json  package.json  web.code-workspace
free_web_tools/: development.db  package.json
migrations/2022-11-20-040834_heroes/: up.sql
migrations/2022-11-20-090419_user/: up.sql
migrations/2022-11-20-170626_add_email_verify/: down.sql  up.sql
migrations/2022-11-26-043813_add_token/: down.sql  up.sql
migrations/2022-11-26-045401_add_role/: up.sql
migrations/2022-11-26-101640_add_update_at_token/: down.sql  up.sql
migrations/2022-11-27-052817_add_posts/: up.sql
rust-backend/: Cargo.toml  README.md
rust-backend/migrations/2022-11-20-090419_user/: down.sql  up.sql
rust-backend/migrations/2022-11-20-170626_add_email_verify/: up.sql
rust-backend/migrations/2022-11-26-043813_add_token/: up.sql
rust-backend/src/: error_handler.rs  main.rs  schema.rs
rust-backend/src/base/: mod.rs
rust-backend/src/utils/: validation.rs
src/: error_handler.rs  lib.rs  main.rs  schema.rs
src/admin/: routes.rs
src/auth/: mod.rs  model.rs  routes.rs  service.rs
src/auth/guard/: require_auth.rs
src/base/: mod.rs  model.rs
src/components/: mod.rs
src/components/admin/: routes.rs
src/components/auth/: mod.rs  model.rs  routes.rs  service.rs
src/components/posts/: mod.rs  model.rs  routes.rs  service.rs
src/employees/: model.rs  routes.rs
src/services/: bcrypt.rs
src/utils/: bcrypt.rs  jwt.rs  mod.rs  slug.rs  validation.rs
tn_crawler/: Cargo.toml
(+8 files in other folders)
