[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "serde_json"]}
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.13.0"
jsonwebtoken = "8.1.1"
chrono = "0.4.23"
cargo-make = "0.36.3"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
schemars = "0.8.11"
regex = "1.7.0"
validator = { version = "0.16.0", features = ["derive"] }
rand = "0.8.5"

[tasks.watch]
command = "cargo"
args = ["watch", "--ignore", "web", "-x", "run"]
